added remote debugging

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,8 +12,11 @@
 default_envs = serial
 
 [common]
-lib_deps = fastled/FastLED @ ^3.4.0
-
+lib_deps = 
+	        WiFi
+            WiFiClientSecure
+            fastled/FastLED               @ ^3.4.0
+            joaolopesf/RemoteDebug        @ ^3.0.5
 [env]
 platform    = espressif32@3.5.0
 framework   = arduino
@@ -26,6 +29,11 @@ upload_speed    = 921600
 upload_protocol = espota
 upload_port     = 192.168.1.99
 lib_deps        = ${common.lib_deps}
+build_type      = debug
+build_flags   = -DLEDSTRIP=1
+                -DUSE_SCREEN=0
+                -std=gnu++17
+                -Ofast     
 
 [env:serial]
 monitor_speed = 115200
@@ -33,3 +41,8 @@ upload_speed  = 921600
 upload_port   = COM6
 monitor_port  = COM6
 lib_deps        = ${common.lib_deps}
+build_type      = debug
+build_flags   = -DLEDSTRIP=1
+                -DUSE_SCREEN=0
+                -std=gnu++17
+                -Ofast     
