--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = ota
+default_envs = bop # plafond serial
 
 [common]
 lib_deps = 
@@ -23,11 +23,23 @@ framework   = arduino
 build_type  = debug
 board = esp32dev
 
-[env:ota]
+[env:bop]
 monitor_speed   = 115200
 upload_speed    = 921600
 upload_protocol = espota
 upload_port     = 192.168.1.99
+lib_deps        = ${common.lib_deps}
+build_type      = debug
+build_flags   = -DLEDSTRIP=1
+                -DUSE_SCREEN=0
+                -std=gnu++17
+                -Ofast     
+
+[env:plafond]
+monitor_speed   = 115200
+upload_speed    = 921600
+upload_protocol = espota
+upload_port     = 192.168.1.253
 lib_deps        = ${common.lib_deps}
 build_type      = debug
 build_flags   = -DLEDSTRIP=1
