ignite leds blink and refactoring

--- a/platformio.ini
+++ b/platformio.ini
@@ -9,52 +9,41 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = bop # plafond serial
+default_envs = ota
 
 [common]
 lib_deps = 
-	        WiFi
-            WiFiClientSecure
-            fastled/FastLED               @ ^3.4.0
-            joaolopesf/RemoteDebug        @ ^3.0.5
+	fastled/FastLED               @ ^3.4.0
+	joaolopesf/RemoteDebug        @ ^3.0.5
+
 [env]
-platform    = espressif32@3.5.0
-framework   = arduino
-build_type  = debug
+platform = espressif32@3.5.0
+framework = arduino
+build_type = debug
 board = esp32dev
 
-[env:bop]
-monitor_speed   = 115200
-upload_speed    = 921600
+[env:ota]
+monitor_speed = 115200
+upload_speed = 921600
 upload_protocol = espota
-upload_port     = 192.168.1.99
-lib_deps        = ${common.lib_deps}
-build_type      = debug
-build_flags   = -DLEDSTRIP=1
-                -DUSE_SCREEN=0
-                -std=gnu++17
-                -Ofast     
-
-[env:plafond]
-monitor_speed   = 115200
-upload_speed    = 921600
-upload_protocol = espota
-upload_port     = 192.168.1.253
-lib_deps        = ${common.lib_deps}
-build_type      = debug
-build_flags   = -DLEDSTRIP=1
-                -DUSE_SCREEN=0
-                -std=gnu++17
-                -Ofast     
+upload_port = 192.168.1.99
+lib_deps = 
+	${common.lib_deps}
+build_type = debug
+build_flags = -DLEDSTRIP=1
+	-DUSE_SCREEN=0
+	-std=gnu++17
+	-Ofast
 
 [env:serial]
 monitor_speed = 115200
-upload_speed  = 921600
-upload_port   = COM6
-monitor_port  = COM6
-lib_deps        = ${common.lib_deps}
-build_type      = debug
-build_flags   = -DLEDSTRIP=1
-                -DUSE_SCREEN=0
-                -std=gnu++17
-                -Ofast     
+upload_speed = 921600
+upload_port = COM6
+monitor_port = COM6
+lib_deps = 
+	${common.lib_deps}
+build_type = debug
+build_flags = -DLEDSTRIP=1
+	-DUSE_SCREEN=0
+	-std=gnu++17
+	-Ofast
