--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,8 @@ default_envs = ota
 lib_deps = 
 	fastled/FastLED               @ ^3.4.0
 	joaolopesf/RemoteDebug        @ ^3.0.5
+	me-no-dev/AsyncTCP            @ ^1.1.1
+	me-no-dev/ESP Async WebServer@^1.2.3
 
 [env]
 platform = espressif32@3.5.0
@@ -29,6 +31,7 @@ upload_protocol = espota
 upload_port = 192.168.1.99
 lib_deps = 
 	${common.lib_deps}
+
 build_type = debug
 build_flags = -DLEDSTRIP=1
 	-DUSE_SCREEN=0
